@@ -288,7 +288,7 @@ function print_pedigree_person($pid, $style=1, $show_famlink=true, $count=0, $pe
 		
 			//LBox --------  change for Lightbox Album --------------------------------------------
 			if (file_exists("modules/lightbox/album.php")) {
-				print "<a href=\"" . $object["file"] . "\" rel=\"clearbox[general_2]\" title=\"" . $object['mid'] . ":" . $GEDCOM . ":" . PrintReady(htmlspecialchars($name)) . "\">";
+				print "<a href=\"" . $object["file"] . "\" rel=\"clearbox[general_2]\" rev=\"" . $object['mid'] . ":" . $GEDCOM . ":" . PrintReady(htmlspecialchars($name)) . "\">";
 			}else
 			// ---------------------------------------------------------------------------------------------
 			
